[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/SpikeTrapJustBecause.png" type="Texture" id=1]
[ext_resource path="res://scenes/SpikeTrap.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 42, 60 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 126, 0, 42, 60 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 60, 42, 60 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 42, 60, 42, 60 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 84, 60, 42, 60 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 126, 60, 42, 60 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 42, 60 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 42, 0, 42, 60 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 84, 0, 42, 60 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 13 ), SubResource( 12 ) ],
"loop": false,
"name": "Strike",
"speed": 15.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 19 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 19 ), SubResource( 18 ) ],
"loop": false,
"name": "Prepare",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16, 16 )

[node name="SpikeTrap" type="Area2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
animation = "Prepare"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 21, 45 )
shape = SubResource( 10 )

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 21, 45 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 11 )
disabled = true

[connection signal="body_entered" from="." to="." method="_on_SpikeTrap_body_entered" flags=3]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered" flags=3]
